
bin_PROGRAMS = dispatch-ng

dispatch_ng_SOURCES = incl.h \
                      utils.c      utils.h            \
                      address.c    address.h          \
                      balancer.c   balancer.h         \
                      connector.c  connector.h        \
                      flush.c      flush.h            \
                      session.c    session.h          \
                      server.c     server.h           \
                      main.c
dispatch_ng_CFLAGS = -Wall $(DISPATCH_NG_CFLAGS)
dispatch_ng_LDADD = $(DISPATCH_NG_LIBS)
                      

